# pdftable.online

./: Dockerfile  README.md  compose.yaml  pyproject.toml
api/: consumers.py  models.py  views.py
api/migrations/: 0001_initial.py
core/: asgi.py  settings.py  urls.py
nginx/conf.d/: default.conf
nginx/ssl/: fullchain.pem  privkey.pem
static/api/js/: data_visualizer.js  pdf_processor.js  table_manager.js
templates/: index.html
